安卓手机 展现图片显示过大的问题 修改晒一晒

--- a/JiaoBaoYun-hb/html/quan/zone_main.html
+++ b/JiaoBaoYun-hb/html/quan/zone_main.html
@@ -48,7 +48,7 @@
 			})
 			events.addTap('pub-dynamic', function() {
 				var pubDynamic = document.getElementById("pub-dynamic")
-				events.openNewWindowWithData('../quan/pub-dynamic.html', 'FromZonep');
+				events.openNewWindowWithData('../quan/pub-dynamic.html', 'jxq');
 			})
 		})
 	</script>
