--- a/JiaoBaoYun-hb/html/show/show_home_1.html
+++ b/JiaoBaoYun-hb/html/show/show_home_1.html
@@ -770,7 +770,7 @@
 				InteractionList.push(commentList);
 
 				datasource = [InfoList, ImageList, InteractionList]
-				console.log('datasource' + JSON.stringify(datasource))
+//				console.log('datasource' + JSON.stringify(datasource))
 				return datasource;
 			}
 
