0004806: 添加评论的时候提示文字为“添加回答，最多4000字”

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
@@ -64,6 +64,7 @@
 					[].forEach.call(document.querySelectorAll('.file-extras'),function(item) {
 						item.style.display = 'inline-block';
 					})
+					document.getElementById('answerContent').placeholder="添加回答,最多4000字";
 					var askTitle = document.getElementById("askTitle");
 					askTitle.innerHTML = askModel.AskTitle;
 				});
@@ -71,6 +72,7 @@
 				window.addEventListener('add-comment', function(e) {
 					type = 1;
 					document.getElementById('title').innerText = '我要评论';
+					document.getElementById('answerContent').placeholder="添加评论,最多4000字";
 					[].forEach.call(document.querySelectorAll('.file-extras'),function(item) {
 						item.style.display = 'none';
 					})
