个人空间 展现添加图片展览 修改晒一晒界面

--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -86,10 +86,10 @@
 			title.innerText = userInfo.unick;
 			if(pageFlag == 'jxq') {
 				console.log('jxq')
-				document.getElementById("show").checked = false;
+//				document.getElementById("show").checked = false;
 			}else{
 				console.log('zx')
-				document.getElementById("show").checked = true;
+//				document.getElementById("show").checked = true;
 			}
 
 			//				events.addTap('take_pic', function() {
