--- a/JiaoBaoYun-hb/html/quan/class-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/class-dynamic.html
@@ -73,7 +73,9 @@
 			events.addTap('take_pic', function() {
 				if(CloudFileUtil.files.length < 9) {
 					camera.getPic(camera.getCamera(), function(picPath) {
-						plus.nativeUI.showWaiting(storageKeyName.WAITING);
+						plus.nativeUI.showWaiting(storageKeyName.UPLOADING,{
+							back:'none'
+						});
 						var saveSpace = storageKeyName.CLASSSPACE; //保存空间
 						compress.compressPIC(picPath, function(event) {
 							var localPath = event.target;
@@ -122,7 +124,9 @@
 				if(CloudFileUtil.files.length < 9) {
 					var picCount = 0; //上传图片计数
 					gallery.getMultiplePic(9 - CloudFileUtil.files.length, function(paths) { //回调函数
-						plus.nativeUI.showWaiting(storageKeyName.UPLOADING); //等待框
+						plus.nativeUI.showWaiting(storageKeyName.UPLOADING,{
+							back:'none'
+						}); //等待框
 						console.log("保存的路径：" + JSON.stringify(paths));
 						var saveSpace = storageKeyName.CLASSSPACE; //保存路径
 						compress.compressPics(paths, function(compressedPaths) {
