点击人员资料界面，提示查询记录为空，其实有数据,调整科教界面

--- a/JiaoBaoYun-hb/html/mine/qun_manage_1.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_1.html
@@ -888,7 +888,9 @@
 							}
 						}
 					} else {
-						mui.toast(data.RspTxt);
+						if(data.RspCode != 9){
+							mui.toast(data.RspTxt);
+						}
 					}
 
 					//获取家长的手机号
