问题详情 图片

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
@@ -32,11 +32,12 @@
 
 			.mui-col-xs-4 {
 				padding: 2px;
-				background: red;
 				height: 100px;
+				min-height: 100px;
+				margin-top: 4px;
 			}
 
-			#question .mui-table-view-cell.mui-active {
+			#question.mui-active {
 				/*点击问题区域的效果*/
 				background: white;
 			}
@@ -60,8 +61,7 @@
 			#question_images {
 				/*问题区域的图片*/
 				margin-top: 5px;
-				margin-bottom: 5px;
-				background: burlywood;
+				margin-bottom: 15px;
 			}
 
 			#guanzhu {
@@ -70,6 +70,7 @@
 				border: 1px solid #1DB8F1;
 				height: 28px;
 				padding-top: 5px;
+				border-radius: 3px;
 			}
 
 			#liulanshu,
