版本号问题

--- a/JiaoBaoYun-hb/html/mine/about.html
+++ b/JiaoBaoYun-hb/html/mine/about.html
@@ -53,7 +53,7 @@
 			mui.plusReady(function() {
 				plus.runtime.getProperty(plus.runtime.appid, function(inf) {
 					console.log('应用版本号:' + plus.runtime.version + ',资源升级版本号:' + inf.version)
-					document.getElementById("version").innerHTML = '教宝云' + getBigVersion(plus.runtime.version,inf.version)
+					document.getElementById("version").innerHTML = '教宝云' + getBigVersion(plus.runtime.version,inf.version);
 				})
 
 				mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
@@ -74,6 +74,8 @@
 						return version0;
 					} else if(parseInt(version0Array[i]) < parseInt(version1Array[i])) {
 						return version1;
+					}else{
+						return version0;
 					}
 				}
 			}
