--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-inviteAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-inviteAnswer.html
@@ -20,7 +20,13 @@
 			<div class="mui-scroll-wrapper">
 				<div class="mui-scroll">
 					<ul id="list-container" class="mui-table-view">
-				 
+						<!--<li class="mui-table-view-cell">
+							<img src="../../image/cloud.png" />
+							<div>
+								<p><span>111</span>邀请<span>2222222222222222222222222222222222222222222222222222222222222222222222</span>回答问题</p>
+								<p class="Ask-Title">[33333]444444444</p>
+							</div>
+						</li>-->
 					</ul>
 				</div>
 			</div>
