取消问题详情界面预加载方式

--- a/JiaoBaoYun-hb/html/mine/qun_manage_data_main.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_data_main.html
@@ -43,7 +43,7 @@
 		});
 
 		mui.plusReady(function() {
-			events.closeWaiting();
+			//events.closeWaiting();
 			var wd = events.showWaiting();
 			//---获取数据并传递数据---start---
 			var main = plus.webview.currentWebview(); //获取当前窗体对象
