--- a/JiaoBaoYun-hb/html/qiuzhi/experts_main.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/experts_main.html
@@ -85,26 +85,29 @@
 			}
 
 			.mui-table-view-cell {
-				line-height: 20px;
+				line-height: 25px;
 			}
 
 			.mui-slider .mui-slider-group .mui-slider-item img {
-				height: 50px;
-				width: 50px;
-				max-height: 50px;
-				max-width: 50px;
+				height: 40px;
+				width: 40px;
+				max-height: 40px;
+				max-width: 40px;
+				min-height: 40px;
+				min-width: 40px;
 			}
 
 			.mui-media-object.expert-headimg {
 				/*专家头像*/
 				border-radius: 50% !important;
-				margin-top: 4px;
-				margin-bottom: 7px;
+				margin-top: 11px;
+				margin-bottom: 12px;
 			}
 
 			.expert-info {
 				/*专家信息*/
-				margin-top: 12px;
+				margin-top: 10px;
+				font-size: 15px;
 			}
 
 			.expert-name {
@@ -119,6 +122,11 @@
 				display: none;
 				/*height: 20px !important;
 				width: 20px !important;*/
+			}
+
+			.expert-answer {
+				/*专家回答数*/
+				color: #B7B7B7;
 			}
 
 			.expert-answernum {
@@ -184,7 +192,7 @@
 											<button id="expert_btn_0_1" type="button" class="mui-btn expert-ask">提问</button> </div> <img class="mui-media-object mui-pull-left expert-headimg" src="http://oigr7qsvz.bkt.clouddn.com/headimge2.png?1488177190317">
 										<div class="mui-media-body expert-info">
 											<div id="expert_name_0_1" class="expert-name  mui-pull-left mui-ellipsis">冰糖馨儿</div> <img class="mui-media-object expert-level" src="../../image/qiuzhi/expert_level.png">
-											<font>回答数 :</font>
+											<font class="expert-answer">回答数 :</font>
 											<font class="expert-answernum">338</font>
 											<div id="expert_usernote_0_1" class="mui-ellipsis expert-usernote">
 												你好啊你好啊你好啊你好啊你好啊你好啊 你好啊你好啊你好啊你好啊你好啊你好啊 你好啊你好啊你好啊你好啊你好啊你好啊 你好啊你好啊你好啊你好啊你好啊你好啊
@@ -504,7 +512,7 @@
 									<div class="mui-media-body expert-info">\
 										<div id="expert_name_' + channelId + '_' + data[i].TabId + '" class="expert-name  mui-pull-left mui-ellipsis"></div>\
 										<img class="mui-media-object expert-level" src="../../image/qiuzhi/expert_level.png" />\
-										<font>回答数 :</font>\
+										<font class="expert-answer">回答数 :</font>\
 										<font class="expert-answernum">' + data[i].AnswerNum + '</font>\
 										<div id="expert_usernote_' + channelId + '_' + data[i].TabId + '" class="mui-ellipsis expert-usernote"></div>\
 									</div>';
