更改回复设置

--- a/JiaoBaoYun-hb/html/quan/aboutme_sub.html
+++ b/JiaoBaoYun-hb/html/quan/aboutme_sub.html
@@ -22,18 +22,18 @@
 		    </ul>
 		  </div>
 		</div>
-		<footer id="footer" class="display-none">
+		<!--<footer id="footer" class="display-none">
 			<div class="footer-center">
 				<input id='msg-content' type="text" class='input-text'></input>
 			</div>
 			<button id='btn-reply' class="mui-btn  btn-commit">提交</button>
-		</footer>
+		</footer>-->
 		<script src="../../js/mui.min.js"></script>
 		<!--<script type="text/javascript" src="../../js/quan/aboutme.js"></script>-->
 		<script src="../../js/utils/events.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 		<script type="text/javascript" src="../../js/publicHomeworkProtocol.js" ></script>
-		<script src="../../js/utils/native.js"></script>
+		<!--<script src="../../js/utils/native.js"></script>-->
 		<script src="../../js/quan/about-me.js"></script>
 	</body>
 
