--- a/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
@@ -1,3 +1,4 @@
+<!--专家详情-->
 <!DOCTYPE html>
 <html>
 
@@ -107,19 +108,19 @@
 
 	<script type="text/javascript">
 		var nodes = {
-			expertImg: document.getElementById("expertImg"),
-			AskNum: document.getElementById("AskNum"),
-			UserNote: document.getElementById("UserNote"),
-			FocusManNum: document.getElementById("FocusManNum"),
-			ExpertLevel: document.getElementById("ExpertLevel"),
-			FocusAskNum: document.getElementById("FocusAskNum"),
-			ExpertChannels: document.getElementById("ExpertChannels"),
-			IsLikeNum: document.getElementById("IsLikeNum"),
-			CommentNum: document.getElementById("CommentNum"),
-			IsFocusedManNum: document.getElementById("IsFocusedManNum"),
-			AnswerNum: document.getElementById("AnswerNum"),
-			inviteNum: document.getElementById("inviteNum"),
-			focusBtn: document.getElementById("focusBtn"),
+			expertImg: document.getElementById("expertImg"),//专家头像
+			AskNum: document.getElementById("AskNum"),//他的回答数量
+			UserNote: document.getElementById("UserNote"),//专家简介
+			FocusManNum: document.getElementById("FocusManNum"),//他关注的人
+			ExpertLevel: document.getElementById("ExpertLevel"),//
+			FocusAskNum: document.getElementById("FocusAskNum"),//关注的问题数量
+			ExpertChannels: document.getElementById("ExpertChannels"),//专家话题
+			IsLikeNum: document.getElementById("IsLikeNum"),//点赞数量
+			CommentNum: document.getElementById("CommentNum"),//评论数量
+			IsFocusedManNum: document.getElementById("IsFocusedManNum"),//关注他的人
+			AnswerNum: document.getElementById("AnswerNum"),//他的回答
+			inviteNum: document.getElementById("inviteNum"),//邀请他的回答
+			focusBtn: document.getElementById("focusBtn"),//关注按钮
 
 		}
 		var ExpertsInfo;
