--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
@@ -26,6 +26,7 @@
 				<div id="question-container" class="question-container">
 					<h5 id="question-title" class="question-title"></h5>
 				</div>
+				<!--作者信息-->
 				<div id="anthor-container" class="anthor-container">
 					<img id="anthor-portrait" class="img-portrait display-inlineBlock" />
 					<div class="export-info display-inlineBlock">
@@ -34,12 +35,13 @@
 					</div>
 					<button id="btn-focus" type="button" class="mui-btn mui-pull-right btn-attention">关注</button>
 				</div>
+				<!--问题控件-->
 				<div class="questionContent-container">
 					<div id="question-content" class="question-content"></div>
 					<div id="answer-imgs" class="answer-imgs"></div>
 					<div class="">
 						<p id="answer-time" class="display-inlineBlock answer-time">5小时前</p>
-						<p class="display-inlineBlock mui-pull-right"><span id="answer-zan" class="mui-icon iconfont icon-zanzan1"></span> </p>
+						<p id="support-answer" class="support-container display-inlineBlock mui-pull-right"><span id="answer-zan" class="mui-icon iconfont icon-support"></span> </p>
 					</div>
 				</div>
 				<div class="comments-info">
