--- a/JiaoBaoYun-hb/html/mine/apply-group.html
+++ b/JiaoBaoYun-hb/html/mine/apply-group.html
@@ -16,12 +16,20 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title"><div class="search-form" >
+			<h1 class="mui-title">
+				<!--<div class="search-form">
+					<div class="mui-input-row  ">
+						<input id="search-keyWord" type="search" class="mui-input-clear" placeholder="通过群成员手机号或用户名搜索群">
+						<input id="search-btn" type="submit" class="search-btn" value="搜索" />
+					</div>
+				</div>-->
+				<div class="search-form" >
 					<div class="mui-input-row" style="display: flex; display: -webkit-flex;width: 100%;">
 						<input style="display: flex;display: -webkit-flex;flex-grow: 1;" id="search-group" type="search" class="mui-input-clear" placeholder="通过群成员手机号或用户名搜索群">
 						<input id="search-btn" type="submit" class="search-btn" value="搜索" />
 					</div>
-				</div></h1>
+				</div>
+			</h1>
 		</header>
 		<div class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
