--- a/JiaoBaoYun-hb/html/mine/apply-group.html
+++ b/JiaoBaoYun-hb/html/mine/apply-group.html
@@ -9,6 +9,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
+		<link href="../../css/mine/search.css" rel="stylesheet" />
 		<!--申请样式表-->
 		<link href="../../css/mine/apply.css" rel="stylesheet" />
 	</head>
@@ -17,15 +18,9 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">
-				<!--<div class="search-form">
+				<div class="search-form">
 					<div class="mui-input-row  ">
-						<input id="search-keyWord" type="search" class="mui-input-clear" placeholder="通过群成员手机号或用户名搜索群">
-						<input id="search-btn" type="submit" class="search-btn" value="搜索" />
-					</div>
-				</div>-->
-				<div class="search-form" >
-					<div class="mui-input-row" style="display: flex; display: -webkit-flex;width: 100%;">
-						<input style="display: flex;display: -webkit-flex;flex-grow: 1;" id="search-group" type="search" class="mui-input-clear" placeholder="通过群成员手机号或用户名搜索群">
+						<input id="search-group" type="search" class="mui-input-clear" placeholder="通过群成员手机号或用户名搜索群">
 						<input id="search-btn" type="submit" class="search-btn" value="搜索" />
 					</div>
 				</div>
@@ -35,9 +30,10 @@
 			<div class="mui-scroll">
 				<!--这里放置真实显示的DOM内容-->
 				<!--<div class="search-form">
-					<div class="mui-input-row mui-search">
-						<input id="search-group" type="search" class="mui-input-clear search-input" placeholder="通过群成员手机号或用户名搜索群" style="">
-						<input id="search-btn" type="submit" class="search-btn" value="搜索"></input>
+					<div class="input-group">
+						<input id="search-group" type="" class="mui-input-clear search-input" placeholder="通过群成员手机号或用户名搜索群" style="">
+						<span class="interval-line"></span>
+						<span id="search-btn" type="button" class="search-btn" value="">搜索</span>
 					</div>
 				</div>-->
 				<ul id="groups-container" class="mui-table-view">
